<?xml version="1.0"?>
<package>
  <name>tork_rpc_util</name>
  <version>0.0.3</version>
  <description>
  This package provides abstract RPC (Remote Procedure Call) structure for
  higher level of robot operations for the ROS-based robots.
  
  Some ROS-based robots come with higher level of convenient operation
  interface (e.g. often written in Python) where robot operators can call
  complicated tasks by a single command. "RPC" here enables interacting with
  those commands via ROS Topic/Service/Action from remote nodes.   
  </description>
  <author email="iiysaito@opensource-robotics.tokyo.jp">Isaac I. Y. Saito</author>
  <maintainer email="dev@opensource-robotics.tokyo.jp">Keio University Yamaguchi Lab</maintainer>

  <license>Apache License 2.0</license>

  <url type="website">http://wiki.ros.org/tork_rpc_util</url>
  <url type="repository">https://github.com/tork-a/tork_rpc_util</url>
  <url type="bugtracker">https://github.com/tork-a/tork_rpc_util/issues</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>roslint</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>genpy</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <test_depend>rostest</test_depend>
  
  <export />
</package>
