<?xml version="1.0"?>
<package>
  <name>tork_rpc</name>
  <version>0.0.4</version>
  <description>This package suite provides abstract RPC (Remote Procedure Call)
  structure for higher level of robot operations for the ROS-based robots.
  </description>

  <author email="iiysaito@opensource-robotics.tokyo.jp">Isaac I. Y. Saito</author>
  <maintainer email="dev@opensource-robotics.tokyo.jp">Keio University Yamaguchi Lab</maintainer>
  <maintainer email="dev@opensource-robotics.tokyo.jp">TORK</maintainer>

  <license>Apache License 2.0</license>

  <url type="website">http://wiki.ros.org/tork_rpc</url>
  <url type="repository">https://github.com/tork-a/tork_rpc</url>
  <url type="bugtracker">https://github.com/tork-a/tork_rpc/issues</url>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>tork_rpc_util</run_depend>

  <export>
    <metapackage/>
  </export>
</package>
